2 files modified, 2 added, 2 deleted

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,9 +16,18 @@
   height: 60px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   background-color: #1976d2;
   color: white;
   font-weight: 600;
+  padding: 0 15px;
+  section {
+    display: flex;
+    align-items: center;
+  }
+  &.dark {
+    background-color: black;
+  }
 }
 
 //Card
