3 files modified, 1 deleted

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,6 +21,9 @@
   color: white;
   font-weight: 600;
   padding: 0 15px;
+  img {
+    margin-right: 10px;
+  }
   section {
     display: flex;
     align-items: center;
