start from scratch

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,7 @@
 
 <section class="mainWrapper">
   <app-card
+    type="analytics"
     [isOpen]="false"
     img="https://miro.medium.com/max/1400/0*VD2FvtlNHDmV_iLb.png"
     title="Ng Analytics"
@@ -28,4 +29,14 @@
     href="https://angular.io/guide/elements"
     btnText="Reload"
   ></app-card>
+
+  <!-- <app-card
+    type="video"
+    [isOpen]="true"
+    img="https://cdn.iconscout.com/icon/free/png-256/angular-2336967-1982848.png"
+    title="The ocean"
+    text="Pacific Ocean"
+    href="https://angular.io/guide/elements"
+    btnText="Refresh"
+  ></app-card> -->
 </section>
