--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -11,21 +11,18 @@
       </button>
     </div>
     <div @slideDownUp *ngIf="isOpen" class="box">
-      <ng-container *ngIf="!isLoading; else progressBar">
-        <img
-          width="250"
-          src="https://developers.google.com/static/analytics/images/terms/logo_lockup_analytics_icon_vertical_black_2x.png?hl=es"
-        />
-
-        <p *ngIf="text" class="card-text">{{ text }}</p>
-        <button class="btn btn-primary" (click)="reload()">
-          {{ btnText }}
-        </button>
+      <ng-container [ngSwitch]="type">
+        <video-widget
+          *ngSwitchCase="'video'"
+          [text]="text"
+          [btnText]="btnText"
+        ></video-widget>
+        <analytics-widget
+          *ngSwitchCase="'analytics'"
+          [text]="text"
+          [btnText]="btnText"
+        ></analytics-widget>
       </ng-container>
-
-      <ng-template #progressBar>
-        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-      </ng-template>
     </div>
   </div>
 </div>
