--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,22 +21,21 @@
 
 <section class="mainWrapper">
   <app-card
-    type="analytics"
     [isOpen]="false"
     img="https://miro.medium.com/max/1400/0*VD2FvtlNHDmV_iLb.png"
     title="Ng Analytics"
-    text="Site metrics of the year"
-    href="https://angular.io/guide/elements"
-    btnText="Reload"
-  ></app-card>
+  >
+    <analytics-widget
+      text="Site metrics of the year"
+      btnText="Reload"
+    ></analytics-widget>
+  </app-card>
 
-  <!-- <app-card
-    type="video"
-    [isOpen]="true"
+  <app-card
+    [isOpen]="false"
     img="https://cdn.iconscout.com/icon/free/png-256/angular-2336967-1982848.png"
     title="The ocean"
-    text="Pacific Ocean"
-    href="https://angular.io/guide/elements"
-    btnText="Refresh"
-  ></app-card> -->
+  >
+    <video-widget text="Pacific Ocean" btnText="Refresh"></video-widget>
+  </app-card>
 </section>
