--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
     [isOpen]="false"
     img="https://miro.medium.com/max/1400/0*VD2FvtlNHDmV_iLb.png"
     title="Ng Analytics"
-    text="Site metrics of the year"
+    text="Site metrics of the year 2023"
     btnText="Reload"
   ></app-card>
 </section>
