start from scratch

--- a/src/app/widgets/video-widget/video-widget.component.html
+++ b/src/app/widgets/video-widget/video-widget.component.html
@@ -5,7 +5,7 @@
   </video>
 
   <p *ngIf="text" class="card-text">{{ text }}</p>
-  <button class="btn btn-primary" (click)="toggleVideo()">
+  <button class="btn mr" color="primary" (click)="toggleVideo()">
     {{ videoAction }}
   </button>
   <button class="btn btn-primary" (click)="reload()">{{ btnText }}</button>
